--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
-h2 {
+#pageTitle {
     font-family:"Cambo", serif;
-    
+    color:#feeca8;
+    font-size: 5vw;
 }
 
 .navbar {
@@ -18,8 +19,13 @@ body {
 }
 
 #mainName {
+    font-family:"Cambo", serif;
     color:#feeca8;
-    font-size:50px;
+    font-size: 8vw;
     padding: 10px;
 
+}
+
+.card-header {
+    background-color: #fff1f0;
 }
